Added lines to set a custom time zone